Adicionar js aos modais de login e cadastro

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -26,9 +26,7 @@
             <div class="esquecer">
 
                 <a class="cadastrese">Não tem cadastro, amiga? Cadastre-se</a>
-
-
-                <a id="botaoVoltar">VOLTAR</a>
+                <a id="fechar-login">VOLTAR</a>
 
             </div>
         </div>
@@ -44,10 +42,7 @@
             <input type='password' id='mp-senha' name='senha' maxlength="20" value='' placeholder='SENHA' />
             <button id="entrarLogin">Entrar</button>
             <div class="esquecer">
-
-
-                <a id="botaoVoltar">VOLTAR</a>
-
+                <a id="fechar-cadastro">VOLTAR</a>
             </div>
         </div>
     </div>
