--- a/front-end/desafio.html
+++ b/front-end/desafio.html
@@ -26,12 +26,14 @@
 
 
     <aside>
-        <h1>BEM VINDA AO DIVAS CODE!</h1>
+        <h1>DESAFIO #1</h1>
         <div>
             <img class="imagem" src="./images/bandeira.png" alt="">
         </div>
         <div class="texto">
-            <p>Esse é o começo de uma jornada cheia de aprendizados. Nesse capítulo, você vai aprender os fundamentos básicos de programação e as mais importantes linguagens para começar a criar sites.</p>
+            <p>A linguagem HTML consiste em tags. Toda tag começa com um sinal
+                < antes do nome da tag e termina com>. Você poderia codar a tag que diz para o browser que queremos ler um site?</p>
+            </p>
         </div>
 
 
