--- a/front-end/index.html
+++ b/front-end/index.html
@@ -35,12 +35,12 @@
     <div id="fundo2">
         <div id="popup">
             <h3>CADASTRE-SE</h3>
-            <input type='text' id='mp-email' name='email' maxlength="20" value='' placeholder='NOME' />
-            <input type='text' id='mp-email' name='email' maxlength="20" value='' placeholder='SOBRENOME' />
-            <input type='text' id='mp-email' name='email' maxlength="20" value='' placeholder='E-MAIL' />
-            <input type='text' id='mp-email' name='email' maxlength="20" value='' placeholder='USERNAME' />
-            <input type='password' id='mp-senha' name='senha' maxlength="20" value='' placeholder='SENHA' />
-            <button id="entrarLogin">Entrar</button>
+            <input type='text' id='nome' name='email' maxlength="20" value='' placeholder='NOME' />
+            <input type='text' id='sobrenome' name='email' maxlength="20" value='' placeholder='SOBRENOME' />
+            <input type='text' id='email' name='email' maxlength="20" value='' placeholder='E-MAIL' />
+            <input type='text' id='username' name='email' maxlength="20" value='' placeholder='USERNAME' />
+            <input type='password' id='senha' name='senha' maxlength="20" value='' placeholder='SENHA' />
+            <button id="entrarLogin">Cadastrar</button>
             <div class="esquecer">
                 <a id="fechar-cadastro">VOLTAR</a>
             </div>
