Adicionar o back-end do cadastro ao font-end

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Khula&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
+    <script defer src="cadastro.js"></script>
+    <script defer src="login.js"></script>
     <title>DIVAS GAME</title>
 </head>
 
@@ -20,9 +22,9 @@
     <div id="fundo">
         <div id="popup">
             <h3>LOGIN</h3>
-            <input type='text' id='mp-email' name='email' maxlength="20" value='' placeholder='USERNAME' />
-            <input type='password' id='mp-senha' name='senha' maxlength="20" value='' placeholder='SENHA' />
-            <button id="entrarLogin">Entrar</button>
+            <input type='text' id='loginUsername' name='email' maxlength="20" value='' placeholder='USERNAME' />
+            <input type='password' id='senhaUsername' name='senha' maxlength="20" value='' placeholder='SENHA' />
+            <button id="entrarLoginUsername">Entrar</button>
             <div class="esquecer">
 
                 <a class="cadastrese">Não tem cadastro, amiga? Cadastre-se</a>
@@ -40,7 +42,7 @@
             <input type='text' id='email' name='email' maxlength="20" value='' placeholder='E-MAIL' />
             <input type='text' id='username' name='email' maxlength="20" value='' placeholder='USERNAME' />
             <input type='password' id='senha' name='senha' maxlength="20" value='' placeholder='SENHA' />
-            <button id="entrarLogin">Cadastrar</button>
+            <button id="entrarCadastrar">Cadastrar</button>
             <div class="esquecer">
                 <a id="fechar-cadastro">VOLTAR</a>
             </div>
